--- a/index.html
+++ b/index.html
@@ -14,27 +14,30 @@
       <input name="display" type="text" class="color_display" id="display" size="25"></td>
     </tr>
     <tr>
-      <td width="26%"><input name="button" type="button" class="numero" id="button" value="+" onclick="addition()" ></td>
-      <td width="21%"><input name="button2" type="button" class="numero" id="button2" value="-" onclick="substraction()"></td>
-      <td width="21%"><input name="button3" type="button" class="numero" id="button3" value="*" onclick="multiplication()"></td>
+      <td width="26%"><input name="button5" type="button" class="numero" id="button5" value="AC" onclick="clear_values()" ></td>
+      <td width="21%"><input name="button6" type="button" class="numero" id="button6" value="^" ></td>
+      <td width="21%"><input name="button7" type="button" class="numero" id="button7" value="%" ></td>
       <td width="32%"><input name="button4" type="button" class="numero" id="button4" value="/" onclick="divison()"></td>
     </tr>
     <tr>
-      <td><input name="num7" type="button" class="numero" id="num7" value="7" onclick="display_numbers(7)"></td>
+      <td><input name="num7" type="button" class="numero" id="num7" value="7" onclick="display_numbers(7)" ></td>
       <td><input name="num8" type="button" class="numero" id="num8" value="8" onclick="display_numbers(8)"></td>
       <td><input name="num9" type="button" class="numero" id="num9" value="9" onclick="display_numbers(9)"></td>
+      <td width="21%"><input name="button3" type="button" class="numero" id="button3" value="*" onclick="multiplication()"></td
       <td>&nbsp;</td>
     </tr>
     <tr>
       <td><input name="num4" type="button" class="numero" id="num4" value="4" onclick="display_numbers(4)" ></td>
       <td><input name="num5" type="button" class="numero" id="num5" value="5" onclick="display_numbers(5)" ></td>
       <td><input name="num6" type="button" class="numero" id="num6" value="6" onclick="display_numbers(6)" ></td>
+      <td width="21%"><input name="button2" type="button" class="numero" id="button2" value="-" onclick="substraction()"></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
       <td><input name="num1" type="button" class="numero" id="num1" value="1" onclick="display_numbers(1)" ></td>
       <td><input name="num2" type="button" class="numero" id="num2" value="2" onclick="display_numbers(2)" ></td>
       <td><input name="num3" type="button" class="numero" id="num3" value="3" onclick="display_numbers(3)" ></td>
+      <td width="26%"><input name="button" type="button" class="numero" id="button" value="+" onclick="addition()" ></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
