--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Documento sin título</title>
+  <title>Calculadora</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/script.js"></script>
 </head>
@@ -17,7 +17,7 @@
       <td width="26%"><input name="button5" type="button" class="numero" id="button5" value="AC" onclick="clear_values()" ></td>
       <td width="21%"><input name="button6" type="button" class="numero" id="button6" value="^" ></td>
       <td width="21%"><input name="button7" type="button" class="numero" id="button7" value="%" ></td>
-      <td width="32%"><input name="button4" type="button" class="numero" id="button4" value="/" onclick="divison()"></td>
+      <td width="32%"><input name="button4" type="button" class="numero" id="button4" value="/" onclick="division()"></td>
     </tr>
     <tr>
       <td><input name="num7" type="button" class="numero" id="num7" value="7" onclick="display_numbers(7)" ></td>
